#2788: use buffered transformation and signals